# checker

./: .gitignore  CMakeLists.txt  conanfile.txt  main.c
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
src/: checker.h  handler.c  utils.c
ui/: index.html
ui/css/: index.css
